Update index.html removed personal number/email

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="contact-info">
                 <p class="location">Auburn, IN</p>
                 <p class="contact-item">
-                    <span data-decode="phone" href="tel:KDI2MCkgNjY3LTg4NDU=">(260) 667-8845</span>
+                    <span data-decode="phone" href="tel:KDI2MCkgNjY3LTg4NDU="></span>
                 </p>
                 <p class="contact-item">
-                    <a data-decode="email" href="mailto:c2RzcGlyZWtAZ21haWwuY29t">sdspirek@gmail.com</a>
+                    <a data-decode="email" href="mailto:c2RzcGlyZWtAZ21haWwuY29t"></a>
                 </p>
                 <p class="contact-item">
                     <a href="https://www.linkedin.com/in/scott-spirek-135889bb" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a>
